===============================================================
Tag name:  rtm1_0_64
Originator(s): erik
Date: Jan 17, 2018
One-line Summary: Convert test list to version 2 format and remove ys

Convert the test list to version 2 format, add comments and wallclock to it.
Remove ys tests. Remove aux_clm tests (put those in CLM itself).

Add buildnmlc to .gitignore

 M  cime_config/testdefs/testlist_rtm.xml

===============================================================
Tag name:  rtm1_0_63
Originator(s): erik
Date: Oct 3, 2017
One-line Summary: Upgrade config_component to version 3, allow output file format
                  to change, fix so REFCASE will check for files with or without
                  instance name


M    src/riverroute/RtmIO.F90 --------- Changes from Jim Edwards
        to change NetCDF output file format, also make io_type not public
M    cime_config/buildnml ------------- Fix bug 2477 for RTM so that
        if NINST_RTM > 1, will check if REFCASE has instance name
        in it and then use it, but if not use it without instance name
M    cime_config/config_component.xml - Upgrade to version 3 format

===============================================================
Tag name:  rtm1_0_62
Originator(s): andre
Date: July 5, 2017
One-line Summary: update compset names in testlist

Update the rtm testlist to use clm5 compset alias naming conventions.

M cime_config/testdefs/testlist_rtm.xml

===============================================================
Tag name:  rtm1_0_61
Originator(s): andre
Date: March 17, 2017
One-line Summary: histfile pointer bugfix bugz-2184

Bugfix from bugzilla issue 2184. The histfile infrastructure rtm
inherited from clm needs to use pointers to refer to pio/netcdf file
handles. Bug 2184 has never occured in rtm, but the same problem
existed.

Testing:

    NOTE: testing done with a franken-branch of clm4_5_14_r229 and
    rtm1_0_60.

    rtm - pass - yellowstone gnu, intel, pgi. baseline rtm1_0_60_clm4_5_14_r229.
